# openai-ticket-pattern-miner

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/: tickets.jsonl
src/ticket_miner/: __init__.py  archetypes.py  generate.py
tests/: test_smoke.py
