[project]
name = "ticket-miner"
version = "0.1.0"
description = "Cluster customer support tickets to surface systemic bugs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shawn Shaligram" }]
dependencies = [
    "openai>=1.50.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
